Applied patch from Adrian Crum to fix a layout issue in the order entry page. Issue OFBIZ-807
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@518696 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -1102,9 +1102,8 @@ width: 100%;
 #column-container .left {
 float: left;
 /* alt: position: absolute; top: 0px; left: 0px; */
-/*width: 22em;*/
+width: 22em;
 margin-right: 1em;
-width: 20%;
 }
 
 .left-border {
